--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,7 @@ jobs:
         uses: thedoctor0/zip-release@master
         with:
           type: 'zip'
+          path: CactusViewer.exe
           directory: "${{ env.libraryName }}/bin"
           filename: "${{ env.libraryName }}-${{ github.ref_name }}.zip"
         
